# cuadrada

./: .env.example  .gitignore  Cargo.toml  README.md  REFACTOR_PLAN.md  agents.py  app.py  deploy_heroku.bat  deploy_heroku.sh  docker-compose.yml  requirements.txt  setup.py  setup_and_run.bat  setup_and_run.sh  setup_supabase_storage.sql  setup_venv.bat  setup_venv.sh  start.sh  supabase_db.py
migrations/: 001_initial_schema.sql
src/: config.rs  main.rs  state.rs  templates.rs
src/agents/: claude.rs  decision.rs  mod.rs
src/db/: mod.rs  models.rs
src/pdf/: mod.rs
src/routes/: api.rs  mod.rs  pages.rs
src/storage/: mod.rs
static/js/: fix-results.js
templates/: admin.html  admin_login.html  admin_verify.html  auth_error.html  index.html  login_landing.html  logout.html  results.html  summary.html
