[package]
name = "cuadrada"
version = "0.1.0"
edition = "2021"
description = "AI-powered peer review system for academic papers"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "multipart", "form"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json"] }

# PDF
pdf-extract = "0.7"
genpdf = "0.2"

# Templates
tera = "1.19"

# Config & utilities
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File handling
mime_guess = "2"
tempfile = "3"
regex = "1"
zip = "2"
